--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Ryan Alston: Amateur Coder</title>
+		<title>{{ page.title }}</title>
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
 	<body>
@@ -13,7 +13,12 @@
         		<li><a href="/blog">Lifting</a></li>
     		</ul>
 		</nav>
-    <footer>
+		<div class="container">
+			
+			{{ content }}
+			
+			</div><!-- /.container -->
+    		<footer>
     		<ul>
         		<li><a href="raalston@ucsc.edu">email</a></li>
         		<li><a href="https://github.com/raalston">github.com/raalston</a></li>
