--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<title>{{ page.title }}</title>
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">Projects</a></li>
-        		<li><a href="/blog">Lifting</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
+	<html>
+		<head>
+			<title>{{ page.title }}</title>
+			<!-- link to main stylesheet -->
+			<link rel="stylesheet" type="text/css" href="/css/main.css">
+		</head>
+		<body>
+			<nav>
+	    		<ul>
+	        		<li><a href="/">Home</a></li>
+		        	<li><a href="/about">About</a></li>
+	        		<li><a href="/cv">CV</a></li>
+	        		<li><a href="/blog">Blog</a></li>
+	    		</ul>
+			</nav>
+			<div class="container">
 			
 			{{ content }}
 			
 			</div><!-- /.container -->
-    		<footer>
-    		<ul>
-        		<li><a href="raalston@ucsc.edu">email</a></li>
-        		<li><a href="https://github.com/raalston">github.com/raalston</a></li>
-			</ul>
-		</footer>
+			<footer>
+	    		<ul>
+	        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
+	        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+				</ul>
+			</footer>
+		</body>
+	</html>
