--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,9 +8,9 @@
 		<body>
 			<nav>
 	    		<ul>
-	        		<li><a href="/">Home</a></li>
-		        	<li><a href="/about">About</a></li>
-	        		<li><a href="/cv">CV</a></li>
+	        		<li><a href="/home">Home</a></li>
+		        	<li><a href="/free page">About</a></li>
+	        		<li><a href="/projects">CV</a></li>
 	        		<li><a href="/blog">Blog</a></li>
 	    		</ul>
 			</nav>
@@ -21,8 +21,8 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-	        		<li><a href="https://github.com/hankquinlan">github.com/raalston</a></li>
+	        		<li><a href="mailto:raalston@ucsc.edu">email</a></li>
+	        		<li><a href="https://github.com/raalston">github.com/raalston</a></li>
 				</ul>
 			</footer>
 		</body>
