--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,9 +8,9 @@
 		<body>
 			<nav>
 	    		<ul>
-	        		<li><a href="/home">Home</a></li>
-		        	<li><a href="/free page">About</a></li>
-	        		<li><a href="/projects">CV</a></li>
+	        		<li><a href="/">Home</a></li>
+		        	<li><a href="/free-page">Free Page</a></li>
+	        		<li><a href="/projects">Projects</a></li>
 	        		<li><a href="/blog">Blog</a></li>
 	    		</ul>
 			</nav>
